# perplex

./: .gitignore  CHANGELOG.md  LICENSE  cli-test.py  flake.nix  main.py  perplex-client.cabal  result
app/: Main.hs
dist-newstyle/cache/: compiler  config
