cabal-version:      3.0
name:               perplex-client
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             xsj3n
maintainer:         ""
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable perplex-client
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    extra,
                      text,
                      word-wrap,
                      ansi-terminal,
                      base ^>=4.20.2.0,
                      network,
                      bytestring

    hs-source-dirs:   app
    default-language: GHC2024
